--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,8 @@
     <string name="total_notificaciones">Total notificaciones cargadas</string>
     <string name="total_notificaciones_gestionadas">Total notificaciones gestionadas</string>
     <string name="total_notificaciones_acabadas">Notificaciones hechas hoy</string>
-    <string name="total_resultados">Resultados almacenados</string>
+    <string name="total_resultados_reparto">Resultados almacenados Reparto</string>
+    <string name="total_resultados_lista">Resultados almacenados Lista</string>
     <string name="total_fotos">Total fotos hechas hoy</string>
     <string name="total_notificaciones_pendientes_2_hoy">Total 2ª visita para hoy </string>
     <string name="total_notificaciones_pendientes_2_otro_dia">Total 2ª visita para otro dia </string>
