MEJORA EL CONTEO DE EFOTOS

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,14 +22,14 @@
     <string name="total_notificaciones">Total notificaciones cargadas</string>
     <string name="total_notificaciones_gestionadas">Total notificaciones gestionadas</string>
     <string name="total_notificaciones_acabadas">Notificaciones hechas hoy</string>
-    <string name="total_resultados_reparto">Resultados almacenados Reparto</string>
+    <string name="total_resultados_reparto">Resultados almacenados</string>
     <string name="total_resultados_lista">Resultados almacenados Lista</string>
     <string name="total_fotos">Total fotos hechas hoy</string>
     <string name="total_notificaciones_pendientes_2_hoy">Total 2ª visita para hoy </string>
     <string name="total_notificaciones_pendientes_2_otro_dia">Total 2ª visita para otro dia </string>
     <string name="total_notificaciones_marcadas">Total notificaciones marcadas</string>
-    <string name="total_lista">Total notificaciones en LISTA</string>
-    <string name="total_lista_cert">Total certificados en LISTA</string>
+    <string name="total_lista">Notificaciones almacenadas en LISTA</string>
+    <string name="total_lista_cert">Certificados almacenados en LISTA</string>
     <string name="detalle_notificaciones">Resumen gestionadas</string>
     <string name="detalle_notificacion">Detalle notificación</string>
     <string name="detalle_primer_intento">Detalle primer intento</string>
@@ -97,8 +97,9 @@
     <string name="error_lectura_fichero_xml">Se ha producido un fallo al leer el fichero XML para realizar el sellado de tiempo</string>
     <string name="error_carga_resultados">No hay resultados para esta notificacion</string>
     <string name="error_guardar_en_bd">Se ha producido un error al guardar en la base de datos</string>
-    <string name="guardado">Guardado</string>
-    <string name="realizar_notif_en_papel">Debido a que no se ha generado ni el sello de tiempo ni el fichero XML, realice la notificación en papel</string>
+    <string name="guardado">GUARDADO!!!</string>
+    <string name="no_guardado">NO GUARDADO!!!</string>
+    <string name="realizar_notif_en_papel">REVISE LOS PERMISOS DE LA APLICACION si estan todos activos REALICE LA NOTIFICACION EN PAPEL</string>
     <string name="notificacion_grabada_correctamente">La notificación se ha guardado correctamente</string>
     <string name="cerrar_reparto_info">Va a CERRAR el reparto, se generará el fichero con los RESULTADOS su subida al FTP y el BORRADO de los datos del dispositivo si no estas gestionando por PEE. ¿Desea Continuar?</string>
     <string name="borrar_reparto_info">Va a BORRAR el reparto, se eliminaran todos de los datos del dispositivo. ¿Desea Continuar?</string>
