--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,17 +17,17 @@
     <string name="notificador">Notificador</string>
     <string name="delegacion">Delegación</string>
     <string name="fecha">Fecha</string>
-    <string name="total_ficheros">Total ficheros cargados</string>
+    <string name="total_ficheros">Ficheros cargados</string>
     <string name="total_remesas">Total remesas</string>
-    <string name="total_notificaciones">Total notificaciones cargadas</string>
+    <string name="total_notificaciones">....Cargadas</string>
     <string name="total_notificaciones_gestionadas">Total notificaciones gestionadas</string>
     <string name="total_notificaciones_acabadas">Notificaciones hechas hoy</string>
     <string name="total_resultados_reparto">Resultados almacenados</string>
     <string name="total_resultados_lista">Resultados almacenados Lista</string>
-    <string name="total_fotos">Total fotos hechas hoy</string>
-    <string name="total_notificaciones_pendientes_2_hoy">Total 2ª visita para hoy </string>
-    <string name="total_notificaciones_pendientes_2_otro_dia">Total 2ª visita para otro dia </string>
-    <string name="total_notificaciones_marcadas">Total notificaciones marcadas</string>
+    <string name="total_fotos">Fotos hechas hoy</string>
+    <string name="total_notificaciones_pendientes_2_hoy">2ª vistas para hoy </string>
+    <string name="total_notificaciones_pendientes_2_otro_dia">....2ª visita para otro dia </string>
+    <string name="total_notificaciones_marcadas">Marcadas</string>
     <string name="total_lista">Notificaciones almacenadas en LISTA</string>
     <string name="total_lista_cert">Certificados almacenados en LISTA</string>
     <string name="detalle_notificaciones">Resumen gestionadas</string>
@@ -35,7 +35,7 @@
     <string name="detalle_primer_intento">Detalle primer intento</string>
     <string name="no_entregado">No entregado</string>
     <string name="entregado">Entregado</string>
-    <string name="entregadoConSinFirma">01 Entregado (Con/Sin Firma)</string>
+    <string name="entregadoConSinFirma">01 Entregado</string>
     <string name="todos">Todos</string>
     <string name="entregado_con_firma_01">01 Entregado con Firma</string>
     <string name="entregado_01">01 Entregado sin Firma</string>
@@ -47,7 +47,7 @@
     <string name="rehusado_06">06 Rehusado</string>
     <string name="nadie_se_hace_cargo_07">07 Nadie se hace cargo (1ª Visita)</string>
     <string name="nadie_se_hace_cargo_33">33 Nadie se hace cargo (2ª Visita)</string>
-    <string name="entregado_en_oficina_08">08 Entregado en oficina (Con/Sin Firma)</string>
+    <string name="entregado_en_oficina_08">08 Entregado en oficina</string>
     <string name="no_entregado_en_oficina_09">09 No Entregado en oficina</string>
     <string name="cerrar_reparto">CERRAR REPARTO</string>
     <string name="hacer_foto">Hacer Foto</string>
