--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,15 +19,15 @@
     <string name="fecha">Fecha</string>
     <string name="total_ficheros">Ficheros cargados</string>
     <string name="total_remesas">Total remesas</string>
-    <string name="total_notificaciones">....Cargadas</string>
+    <string name="total_notificaciones">Cargadas</string>
     <string name="total_notificaciones_gestionadas">Total notificaciones gestionadas</string>
     <string name="total_notificaciones_acabadas">Notificaciones hechas hoy</string>
     <string name="total_resultados_reparto">Resultados almacenados</string>
     <string name="total_resultados_lista">Resultados almacenados Lista</string>
     <string name="total_fotos">Fotos hechas hoy</string>
-    <string name="total_notificaciones_pendientes_2_hoy">2ª vistas para hoy </string>
-    <string name="total_notificaciones_pendientes_2_otro_dia">....2ª visita para otro dia </string>
-    <string name="total_notificaciones_marcadas">Marcadas</string>
+    <string name="total_notificaciones_pendientes_2_hoy">2ª vistas hoy </string>
+    <string name="total_notificaciones_pendientes_2_otro_dia">....2ª visita otro dia </string>
+    <string name="total_notificaciones_marcadas">....Marcadas</string>
     <string name="total_lista">Notificaciones almacenadas en LISTA</string>
     <string name="total_lista_cert">Certificados almacenados en LISTA</string>
     <string name="detalle_notificaciones">Resumen gestionadas</string>
@@ -93,7 +93,7 @@
     <string name="informacion_segundo_intento_2">o después de las</string>
     <string name="generado_xml">Generando el fichero XML</string>
     <string name="generado_sello_de_tiempo">Generando el sello de tiempo del fichero XML</string>
-    <string name="error_generar_XML">No se ha generado el fichero XML</string>
+    <string name="error_generar_XML">No se ha generado el fichero XML de resultados. REVISE LOS PERMISOS DEL MOVIL</string>
     <string name="error_lectura_fichero_xml">Se ha producido un fallo al leer el fichero XML para realizar el sellado de tiempo</string>
     <string name="error_carga_resultados">No hay resultados para esta notificacion</string>
     <string name="error_guardar_en_bd">Se ha producido un error al guardar en la base de datos</string>
