--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="total_notificaciones">Cargadas</string>
     <string name="total_notificaciones_gestionadas">Total notificaciones gestionadas</string>
     <string name="total_notificaciones_acabadas">Notificaciones hechas hoy</string>
-    <string name="total_resultados_reparto">Resultados almacenados</string>
+    <string name="total_resultados_reparto">Resultados almacenados para REPARTO</string>
     <string name="total_resultados_lista">Resultados almacenados Lista</string>
     <string name="total_fotos">Fotos hechas hoy</string>
     <string name="total_notificaciones_pendientes_2_hoy">2ª vistas hoy </string>
