--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,16 +17,18 @@
     <string name="notificador">Notificador</string>
     <string name="delegacion">Delegación</string>
     <string name="fecha">Fecha</string>
-    <string name="total_ficheros">Ficheros cargados</string>
+    <string name="total_ficheros">Ficheros Sicer cargados</string>
     <string name="total_remesas">Total remesas</string>
     <string name="total_notificaciones">Cargadas</string>
+    <string name="total_nombre_fichero_sicer">....Nombre Fichero Sicer</string>
+    <string name="total_nombre_fichero_segundo">Nombre Fichero Segundos</string>
     <string name="total_notificaciones_gestionadas">Total notificaciones gestionadas</string>
     <string name="total_notificaciones_acabadas">Notificaciones hechas hoy</string>
     <string name="total_resultados_reparto">Resultados almacenados para REPARTO</string>
     <string name="total_resultados_lista">Resultados almacenados Lista</string>
     <string name="total_fotos">Fotos hechas hoy</string>
-    <string name="total_notificaciones_pendientes_2_hoy">2ª vistas hoy </string>
-    <string name="total_notificaciones_pendientes_2_otro_dia">....2ª visita otro dia </string>
+    <string name="total_notificaciones_pendientes_2_hoy">2ª vistas para hoy </string>
+    <string name="total_notificaciones_pendientes_2_otro_dia">....2ª visita para otro dia </string>
     <string name="total_notificaciones_marcadas">....Marcadas</string>
     <string name="total_lista">Notificaciones almacenadas en LISTA</string>
     <string name="total_lista_cert">Certificados almacenados en LISTA</string>
@@ -72,13 +74,17 @@
     <string name="guardar">Guardar</string>
     <string name="cargar_fichero_sicer">Cargar fichero SICER</string>
     <string name="esta_seguro_de_cargar_el_fichero_sicer">¿Está seguro de cargar el fichero SICER</string>
-    <string name="no_cargar_el_fichero_sicer">Antes de cargar un nuevo reparto debe BORRAR el actual cargado en el dispositivo</string>
+    <string name="no_cargar_el_fichero_sicer">AVISO!! Antes de cargar un nuevo reparto debe BORRAR el actual cargado en el dispositivo</string>
     <string name="conexion_ftp">Conexión FTP</string>
     <string name="espere_conexion_servidor_ftp">Espere mientras se conecta al servidor FTP</string>
-    <string name="fallo_conexion_servidor_ftp">No se ha podido conectar al servidor FTP</string>
+    <string name="fallo_conexion_servidor_ftp">ERROR!! al conectar al servidor FTP</string>
     <string name="guardando_datos_en_bd_interna">Guardando los datos en la base de datos interna</string>
     <string name="cargando_fichero_sicer">"Cargando fichero SICER...\nLinea: "</string>
-    <string name="fichero_cargado_anteriormente">El fichero ya se habia cargado anteriormente</string>
+    <string name="sicer_fichero_cargado_anteriormente">AVISO!! FICHERO SICER YA FUE CARGADO</string>
+    <string name="segundos_reparto_fichero_cargado_anteriormente">AVISO!! FICHERO SEGUNDOS INTENTOS REPARTO YA FUE CARGADO</string>
+    <string name="segundos_lista_fichero_cargado_anteriormente">AVISO!! FICHERO SEGUNDOS INTENTOS LISTA YA FUE CARGADO</string>
+    <string name="segundos_lista_cargado_avisos">AVISO!! Estas en modo OFICINA debes cargar el fichero segundos_intentos_lista</string>
+    <string name="segundos_reparto_cargado_aviso">AVISO!! Estas en modo REPARTO debes cargar el fichero segundos_intentos_repartidores</string>
     <string name="datos_guardados_ok_bd">Se ha guardado correctamente en la base de datos</string>
     <string name="informacion_carga">Información carga</string>
     <string name="latitud">Latitud</string>
@@ -104,13 +110,13 @@
     <string name="cerrar_reparto_info">Va a CERRAR el reparto, se generará el fichero con los RESULTADOS su subida al FTP y el BORRADO de los datos del dispositivo si no estas gestionando por PEE. ¿Desea Continuar?</string>
     <string name="borrar_reparto_info">Va a BORRAR el reparto, se eliminaran todos de los datos del dispositivo. ¿Desea Continuar?</string>
     <string name="cerrar_hacer_foto">Va a hacer la foto del acuse. ¿Desea Continuar?</string>
-    <string name="error_conexion_ftp">Se ha producido un error en la conexión FTP</string>
-    <string name="error_acceso_carpeta_ftp">No se ha podido acceder al FTP</string>
+    <string name="error_conexion_ftp">ERROR!! Se ha producido un error en la conexión FTP</string>
+    <string name="error_acceso_carpeta_ftp">ERROR!! No se ha podido acceder a la carpeta SICER del FTP</string>
     <string name="error_subir_fichero_zip">Se ha producido un error al subir el fichero ZIP</string>
     <string name="error_subir_fichero_CSV">Se ha producido un error al subir el fichero CSV</string>
     <string name="error_borrado_notificaciones">Se ha producido un error al borrar las notificaciones</string>
     <string name="error_borrado_notificaciones_PEE">Gestión por PEE, debera hacer el borrado del reparto manual</string>
-    <string name="error_carga_fichero">Se ha producido un error durante la carga del fichero</string>
+    <string name="error_carga_fichero">ERROR!! CARGANDO EL FICHERO segundos_intentos VUELVE A INTENTARLO</string>
     <string name="error_fallo_borrar_ficheros_sensibles">Se ha producido un error al borrar los ficheros XML, CSV, imagenes y sellos de tiempo</string>
     <string name="generando_fichero_CSV">Generando fichero CSV</string>
     <string name="subiendo_fichero_CSV">Subiendo fichero CSV al servidor FTP</string>
@@ -133,7 +139,7 @@
     <string name="password">Contraseña</string>
     <string name="configuracion">Configuración</string>
     <string name="eliminado_todo_correctamente">Se ha eliminado todo correctamente</string>
-    <string name="error_no_existe_notif_en_carga_previa">No existe la notificación en el fichero SICER cargado</string>
+    <string name="error_no_existe_notif_en_carga_previa">ERROR!! No existe la notificación en el fichero SICER cargado</string>
     <string name="error_guardar_notificaciones">Error al guardar las notificaciones</string>
     <string name="error_actualizar_notificaciones">Error al actualizar las notificaciones</string>
     <string name="usuario_no_valido">Usuario no válido</string>
@@ -148,7 +154,7 @@
     <string name="error_descarga_fichero_conexion">Se ha producido un fallo durante la descarga del fichero debido a un fallo de conexion</string>
     <string name="no_error_durante_actualizacion">Se actualizó correctamente la nueva versión </string>
     <string name="error_durante_comprobacion_version">Se ha producido un fallo durante la comprobacion de versiones</string>
-    <string name="error_cargar_primero_reparto_sicer">Debes cargar primero el SICER de reparto</string>
+    <string name="error_cargar_primero_reparto_sicer">AVISO!! Debes cargar primero el SICER de reparto</string>
     <string name="info_firma_notificador">Para facilitar el trabajo durante el trabajo de reparto, se precisa que firme por primera vez para dejar constancia de la persona que notifica.</string>
     <string name="dia_limite">Día límite</string>
     <string name="foto_acuse">Hacer Foto</string>
