--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="total_ficheros">Ficheros Sicer cargados</string>
     <string name="total_remesas">Total remesas</string>
     <string name="total_notificaciones">Cargadas</string>
-    <string name="total_nombre_fichero_sicer">....Nombre Fichero Sicer</string>
+    <string name="total_nombre_fichero_sicer">Nombre Fichero Sicer</string>
     <string name="total_nombre_fichero_segundo">Nombre Fichero Segundos</string>
     <string name="total_notificaciones_gestionadas">Total notificaciones gestionadas</string>
     <string name="total_notificaciones_acabadas">Notificaciones hechas hoy</string>
@@ -28,8 +28,8 @@
     <string name="total_resultados_lista">Resultados almacenados Lista</string>
     <string name="total_fotos">Fotos hechas hoy</string>
     <string name="total_notificaciones_pendientes_2_hoy">2ª vistas para hoy </string>
-    <string name="total_notificaciones_pendientes_2_otro_dia">....2ª visita para otro dia </string>
-    <string name="total_notificaciones_marcadas">....Marcadas</string>
+    <string name="total_notificaciones_pendientes_2_otro_dia">2ª visita para otro dia </string>
+    <string name="total_notificaciones_marcadas">Marcadas</string>
     <string name="total_lista">Notificaciones almacenadas en LISTA</string>
     <string name="total_lista_cert">Certificados almacenados en LISTA</string>
     <string name="detalle_notificaciones">Resumen gestionadas</string>
