--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,16 +17,18 @@
     <string name="notificador">Notificador</string>
     <string name="delegacion">Delegación</string>
     <string name="fecha">Fecha</string>
-    <string name="total_ficheros">Ficheros Sicer cargados</string>
+    <string name="total_ficheros">Sicer cargado</string>
     <string name="total_remesas">Total remesas</string>
     <string name="total_notificaciones">Cargadas</string>
-    <string name="total_nombre_fichero_sicer">Fichero Sicer</string>
+    <string name="total_nombre_fichero_sicer">Sicer</string>
     <string name="total_nombre_fichero_segundo">Fichero Segundos</string>
     <string name="total_notificaciones_gestionadas">Total notificaciones gestionadas</string>
-    <string name="total_notificaciones_acabadas">Notificaciones hechas hoy</string>
-    <string name="total_resultados_reparto">Resultados almacenados en modo REPARTO</string>
-    <string name="total_resultados_lista">Resultados almacenados en modo OFICINA</string>
-    <string name="total_fotos">Fotos hechas hoy</string>
+    <string name="total_notificaciones_acabadas">Tus visitas de hoy con resultado</string>
+    <string name="total_resultados_reparto">Resultados almacenados (REPARTO)</string>
+    <string name="total_resultados_lista">Resultados almacenados (OFICINA)</string>
+    <string name="total_xml">XML de los resultados</string>
+    <string name="total_st">ST de los resultados</string>
+    <string name="total_fotos">Fotos de los resultados</string>
     <string name="total_notificaciones_pendientes_2_hoy">2ª vistas para hoy </string>
     <string name="total_notificaciones_pendientes_2_otro_dia">2ª visita para otro dia </string>
     <string name="total_notificaciones_marcadas">Marcadas</string>
@@ -89,6 +91,8 @@
     <string name="informacion_carga">Información carga</string>
     <string name="latitud">Latitud</string>
     <string name="longitud">Longitud</string>
+    <string name="xml">XML</string>
+    <string name="st">ST</string>
     <string name="observaciones">Observaciones</string>
     <string name="hint_observaciones">Mis observaciones...</string>
     <string name="referencia_postal">Referencia Postal</string>
