--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="iniciando_sesion">Iniciando sesión</string>
     <string name="titulo_logout">CERRAR SESION (Sin Cerrar Reparto)</string>
     <string name="nueva_notificacion">NUEVA notificación</string>
+    <string name="resetear_app">RESETEAR APP</string>
     <string name="borrar_reparto">BORRAR Reparto</string>
     <string name="cargar_reparto">CARGAR (Reparto o Lista)</string>
     <string name="resumen_reparto">RESUMEN/CIERRE (Reparto o Lista)</string>
